assets/css/style.css
/* General Settings */

@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Space+Mono&display=swap');


* {
    margin: 0;
    padding: 0;
    list-style-type: none;
    box-sizing: border-box;
    text-decoration: none;
    --color1: #1C646D;
    --color2: #38184C;
    --color3: #e3e3e3;
    --color4: #4c007b;


}

body {
    overflow-x: hidden;
    background-color: var(--color1);
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

/* Navigation and logo */
nav {
    display: flex;
    justify-content: space-between;
    height: 100px;
}

nav img {
    height: 100px;
}

nav ul {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 66%;
}

nav li {
    width: 25%;
    padding: 10px;
    text-align: center;
}

nav ul a {
    text-decoration: none;
    font-family: 'Roboto Mono', sans-serif;
    text-transform: uppercase;
    color: var(--color2);
    border: 1px solid var(--color2);
    border-radius: 5px;
    font-size: 180%;
    margin-left: -20px;
    padding: 5px;
    background-color: var(--color3);
    box-shadow:
        1px 1px var(--color4),
        2px 2px var(--color4),
        3px 3px var(--color4),
        4px 4px var(--color4),
        5px 5px var(--color4),
        6px 6px var(--color4),
        7px 7px var(--color4),
        8px 8px var(--color4);
}

nav ul a:active {
    box-shadow: 0px 0px var(--color4);
    top: 10px;
    right: 10px;
    transition: all 0.5s ease;
}

/* Home section */
.hero-container {
    display: flex;
    justify-content: center;
    margin: 80px;
}

.description {
    display: grid;
    grid:
        "art art"
        "ra ra"
        "to sil";
    background-color: var(--color2);
    width: 67%;
    border: 20px double var(--color3);
    border-radius: 0px 0px 70px;
    font-family: "Space Mono", sans-serif;
    font-size: 1.5vw;
    color: var(--color3);
    text-transform: uppercase;
    text-align: center;
}

.description span {
    grid-area: art;
    font-size: 2rem;
}

#firstName {
    grid-area: ra;
    text-transform: uppercase;
    color: var(--color3);
    font-size: 7.7vw;
    font-family: "Space Mono", sans-serif;
    text-align: left;
    margin-left: 20px;
    text-shadow:
        1px 1px var(--color4),
        2px 2px var(--color4),
        3px 3px var(--color4),
        4px 4px var(--color4),
        5px 5px var(--color4),
        6px 6px var(--color4),
        7px 7px var(--color4),
        8px 8px var(--color4);
}

.tools {
    grid-area: to;
    font-size: 1.3rem;
}

.tools ul {
    display: flex;
    flex-direction: column;
}

#lastName {
    grid-area: sil;
    text-transform: uppercase;
    color: var(--color3);
    font-size: 7.7vw;
    font-family: "Space Mono", sans-serif;
    text-align: right;
    margin-right: 20px;
    text-shadow:
        1px 1px var(--color4),
        2px 2px var(--color4),
        3px 3px var(--color4),
        4px 4px var(--color4),
        5px 5px var(--color4),
        6px 6px var(--color4),
        7px 7px var(--color4),
        8px 8px var(--color4);
}

.profile-pic {
    background: url(../images/profilepic.png) top center;
    width: 33%;
    overflow: hidden;
    border: 20px solid var(--color2);
    border-radius: 70px 0px 0px;
    background-size: cover;
}

/* Footer section */
footer {
    height: 100px;
    width: 100%;
}

footer ul {
    display: flex;
    justify-content: space-around;
    align-items: center;
    height: 100px;
    background-color: var(--color2);
}

footer a {
    font-size: 50px;
    color: var(--color3);
}

i {
    text-shadow:
        1px 1px var(--color4),
        2px 2px var(--color4),
        3px 3px var(--color4),
        4px 4px var(--color4),
        5px 5px var(--color4),
        6px 6px var(--color4),
        7px 7px var(--color4),
        8px 8px var(--color4);
}

/* Gallery */
#gallery-title {
    text-align: center;
    font-size: 3rem;
    font-family: "Space Mono", sans-serif;
    color: var(--color3);
    text-decoration: underline;
}

#gallery-container {
    margin: 50px;
    display: grid;
    grid-template-columns: 33% 33% 33%;
    gap: 1em;
}

.art {
    position: relative;
}

.art img,
.art video {
    width: 100%;
}

.presentation {
    display: none;
    position: absolute;
    background-color: rgba(56, 24, 76, 0.7);
    bottom: 1px;
    padding: 5px;
}

.presentation span {
    font-family: "Space Mono", sans-serif;
    font-size: 0.8rem;
    text-align: center;
    text-transform: uppercase;
    color: var(--color3);
}

.art:hover .presentation {
    display: block;
}

/* About  */

.about-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-top: 20px;
}

.about-container div {
    margin-bottom: 20px;
    background: var(--color2);
    color: var(--color3);
    font-family: "Roboto Mono", sans-serif;
    padding: 20px;
}

.about-container h3 {
    text-transform: uppercase;
    font-family: "Space Mono", sans-serif;
}

.about-me {
    border-radius: 20px 0 0 20px;
    margin-left: 15%;
    border-top: 20px double var(--color3);
    border-left: 20px double var(--color3);
    border-bottom: 20px double var(--color3);
    display: flex;
    box-shadow:
        1px 1px var(--color4),
        2px 2px var(--color4),
        3px 3px var(--color4),
        4px 4px var(--color4),
        5px 5px var(--color4),
        6px 6px var(--color4),
        7px 7px var(--color4),
        8px 8px var(--color4);
}

.about-me p {
    padding-bottom: 10px;
}

.about-me i {
    font-size: 15rem;
    margin-top: 20px;
}

.awards {
    margin-right: 15%;
    border-radius: 0 20px 20px 0;
    border-top: 20px double var(--color3);
    border-right: 20px double var(--color3);
    border-bottom: 20px double var(--color3);
    display: flex;
    flex-direction: row-reverse;
    justify-content: space-around;
    box-shadow:
        1px 1px var(--color4),
        2px 2px var(--color4),
        3px 3px var(--color4),
        4px 4px var(--color4),
        5px 5px var(--color4),
        6px 6px var(--color4),
        7px 7px var(--color4),
        8px 8px var(--color4);
}

.awards i {
    font-size: 15rem;
    margin-top: 20px;
}

.features {
    border-radius: 20px 0 0 20px;
    margin-left: 15%;
    border-top: 20px double var(--color3);
    border-left: 20px double var(--color3);
    border-bottom: 20px double var(--color3);
    display: flex;
    justify-content: space-around;
    box-shadow:
        1px 1px var(--color4),
        2px 2px var(--color4),
        3px 3px var(--color4),
        4px 4px var(--color4),
        5px 5px var(--color4),
        6px 6px var(--color4),
        7px 7px var(--color4),
        8px 8px var(--color4);
}

.features a {
    color: var(--color3);
    text-decoration: underline;
}

.features i {
    font-size: 15rem;
    margin-top: 20px;
}

/* Contact Form */

.contact-me {
    font-family: "Space Mono", sans-serif;
    color: var(--color3);
    margin: 0 50px 20px;
    background-color: var(--color2);
    border-radius: 20px;
}

.contact-me img {
    width: 40%;
}

.contact-me h3 {
    font-size: 3rem;
    text-transform: uppercase;
    text-align: center;
    text-decoration: underline;
    text-decoration-thickness: 8px;
}

.form-container {
    display: flex;
    justify-content: space-around;
    align-items: center;
}

form {
    width: 50%;
    padding: 50px;
    font-size: 1.5rem;
    line-height: 40px;
}

.textinput {
    width: 100%;
    height: 40px;
    background: transparent;
    border: 2px solid var(--color3);
    border-radius: 0px 20px 20px 0px;
    color: var(--color3);
    font-family: "Space Mono", sans-serif;
    font-size: 1.5rem;
    box-shadow:
        1px 1px var(--color4),
        2px 2px var(--color4),
        3px 3px var(--color4),
        4px 4px var(--color4),
        5px 5px var(--color4),
        6px 6px var(--color4),
        7px 7px var(--color4),
        8px 8px var(--color4);
}

#message {
    resize: none;
    width: 100%;
    background: transparent;
    border: 2px solid var(--color3);
    border-radius: 0px 20px 20px 0px;
    color: var(--color3);
    font-family: "Space Mono", sans-serif;
    font-size: 1.5rem;
    box-shadow:
        1px 1px var(--color4),
        2px 2px var(--color4),
        3px 3px var(--color4),
        4px 4px var(--color4),
        5px 5px var(--color4),
        6px 6px var(--color4),
        7px 7px var(--color4),
        8px 8px var(--color4);
}

fieldset {
    text-align: center;
    border: 2px solid var(--color3);
    border-radius: 0px 20px 20px 0px;
    box-shadow:
        1px 1px var(--color4),
        2px 2px var(--color4),
        3px 3px var(--color4),
        4px 4px var(--color4),
        5px 5px var(--color4),
        6px 6px var(--color4),
        7px 7px var(--color4),
        8px 8px var(--color4);
}

#private {
    margin-right: 2em;
}

#submit {
    width: 80%;
    font-size: 1.5rem;
    color: var(--color3);
    font-family: "Space Mono", sans-serif;
    border: 2px solid var(--color3);
    border-radius: 0px 20px 20px 0px;
    background-color: var(--color2);
    padding: 10px;
    margin-top: 20px;
    margin: 0 auto;
    cursor: pointer;
    box-shadow:
        1px 1px var(--color4),
        2px 2px var(--color4),
        3px 3px var(--color4),
        4px 4px var(--color4),
        5px 5px var(--color4),
        6px 6px var(--color4),
        7px 7px var(--color4),
        8px 8px var(--color4);
}


/* Media queries */

@media screen and (min-width:1700px) {
    #firstName {
        top: 20%;
    }
}

@media screen and (max-width:1000px) {
    #submit {
        font-size: 1rem;
    }
}

@media screen and (max-width:800px) {

    header {
        margin-bottom: 70px;
    }

    nav {
        display: block;
        margin: auto;
    }

    nav ul {
        width: 100%;
        padding: 10px;
    }

    nav ul a {
        font-size: 1rem;
    }

    .hero-container {
        display: block;
        width: 80%;
        margin: auto;
        margin-bottom: 50px;
    }

    .profile-pic {
        width: 100%;
        height: 300px;
        background-position: center -100px;
    }

    .description {
        width: 100%;
        display: block;
    }

    #firstName {
        top: 170px;
        font-size: 5rem;
        margin-left: 0px
    }

    #lastName {
        top: 39%;
        right: 0;
        font-size: 5rem;
    }

    #gallery-container {
        display: block;
    }

    .art:hover .presentation {
        display: none;
    }

    .about-container i {
        font-size: 10rem;
    }

    .about-me {
        display: block;
    }

    .about-me p {
        padding-right: 10%;
    }

    .awards {
        display: block;
    }

    .features {
        display: block;
    }

    .contact-me {
        margin: 0 10px 20px;
    }

    .contact-me h3 {
        font-size: 2rem;
    }

    .contact-me img {
        width: 90%;
        margin: 0 18px;
    }

    .form-container {
        flex-direction: column;
    }

    form {
        padding: 10px;
        text-align: center;
        width: 100%;
    }

    .textinput {
        width: 80%;
    }

    #message {
        width: 80%;
    }

    #submit {
        width: 80%;
    }
}

@media screen and (max-width:600px) {
    .profile-pic {
        background-position: top center;
    }
}

@media screen and (max-width:500px) {
    #firstName {
        font-size: 3rem;
    }

    #lastName {
        font-size: 3rem;
    }
}

@media screen and (max-width:320px) {
    nav ul a {
        font-size: 0.8rem;
    }

    #firstName {
        font-size: 2.5rem;
    }

    #lastName {
        font-size: 2.5rem;
    }

    .contact-me {
        margin: 0 10px;
    }

    #submit {
        font-size: 0.8rem;
    }
}

